--- a/src/sass/project/_p-footer.scss
+++ b/src/sass/project/_p-footer.scss
@@ -2,8 +2,12 @@
 
 .p-footer {
   position: relative;
-  padding-top: rem(113);
-  padding-bottom: rem(65);
+  padding-top: rem(40);
+  padding-bottom: rem(200);
+  @include mq(md) {
+    padding-top: rem(113);
+    padding-bottom: rem(65);
+  }
 }
 .p-footer::before {
   position: absolute;
@@ -17,9 +21,12 @@
   bottom: 0;
   left: 0;
   right: 0;
-  aspect-ratio: 1920 / 700;
   object-fit: cover;
   z-index: -2;
+  aspect-ratio: 300 / 700;
+  @include mq(md) {
+    aspect-ratio: 1920 / 700;
+  }
 }
 .p-footer::after {
   position: absolute;
@@ -28,26 +35,33 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  width: rem(457);
   height: auto;
   bottom: 0;
   right: 0;
   aspect-ratio: 457 / 187;
   object-fit: cover;
   z-index: -1;
+  width: 100%;
+  @include mq(md) {
+    width: rem(457);
+  }
 }
 .p-footer__content {
-  max-width: rem(1400);
   width: 100%;
   margin-left: auto;
   margin-right: auto;
-  display: flex;
-  gap: rem(193);
+  @include mq(md) {
+    max-width: rem(1400);
+    display: flex;
+    gap: rem(193);
+  }
 }
 
 .p-footer__left {
-  max-width: rem(350);
   width: 100%;
+  @include mq(md) {
+    max-width: rem(350);
+  }
 }
 
 .p-footer__logo {
@@ -55,7 +69,10 @@
 
 .p-footer__home {
   display: inline-block;
-  width: rem(350);
+  width: rem(200);
+  @include mq(md) {
+    width: rem(350);
+  }
 }
 .p-footer__home img {
   width: 100%;
@@ -65,7 +82,10 @@
 }
 
 .p-footer__address-wrapper {
-  margin-top: rem(20);
+  margin-top: rem(10);
+  @include mq(md) {
+    margin-top: rem(20);
+  }
 }
 
 .p-footer__address {
@@ -81,10 +101,14 @@
 }
 
 .p-footer__sns-wrapper {
-  margin-top: rem(30);
+  margin-top: rem(10);
   display: flex;
-  gap: rem(40);
   align-items: center;
+  gap: rem(16);
+  @include mq(md) {
+    margin-top: rem(30);
+    gap: rem(40);
+  }
 }
 
 .p-footer__sns {
@@ -123,19 +147,32 @@
 }
 
 .p-footer__lists {
-  display: flex;
-  gap: rem(90);
+  margin-top: rem(24);
+  @include mq(md) {
+    margin-top: initial;
+    display: flex;
+    gap: rem(90);
+  }
 }
 
 .p-footer__list {
+}
+.p-footer__list + .p-footer__list {
+  margin-top: rem(16);
+  @include mq(md) {
+    margin-top: initial;
+  }
 }
 
 .p-footer__link {
   color: #fff;
   display: block;
-  font-size: rem(16);
   font-weight: 400;
   letter-spacing: 0.05em;
+  font-size: rem(14);
+  @include mq(md) {
+    font-size: rem(16);
+  }
 }
 .p-footer__link + .p-footer__link {
   margin-top: rem(12);
