--- a/src/sass/project/_p-top-people.scss
+++ b/src/sass/project/_p-top-people.scss
@@ -1,9 +1,12 @@
 @use "global" as *;
 
 .p-top-people {
-  padding-top: rem(640);
   position: relative;
-  margin-top: rem(-320);
+  padding-top: rem(100);
+  @include mq(md) {
+    margin-top: rem(-320);
+    padding-top: rem(640);
+  }
 }
 .p-top-people::before {
   position: absolute;
@@ -30,10 +33,13 @@
 }
 
 .p-top-people__top-title {
-  max-width: rem(396);
+  max-width: rem(280);
   width: 100%;
   margin-left: auto;
   margin-right: auto;
+  @include mq(md) {
+    max-width: rem(396);
+  }
 }
 .p-top-people__top-title img,
 .p-top-people__title img {
@@ -81,10 +87,15 @@
   margin-left: calc(50% - 50vw);
   margin-right: calc(50% - 50vw);
   width: 100vw;
-  margin-top: rem(-560);
+  @include mq(md) {
+    margin-top: rem(-560);
+  }
 }
 .p-top-people__swiper--interview {
-  margin-top: rem(-440);
+  margin-top: rem(32);
+  @include mq(md) {
+    margin-top: rem(-440);
+  }
 }
 .p-top-people__item {
   position: relative;
@@ -114,24 +125,34 @@
 
 .p-top-people__title {
   font-weight: 900;
-  font-size: rem(40);
   line-height: 1.5;
   color: #242424;
+  font-size: rem(20);
+  @include mq(md) {
+    font-size: rem(40);
+  }
 }
 
 .p-top-people__en {
-  margin-top: rem(30);
   font-family: $lato-italic;
-  font-size: rem(30);
   font-weight: 700;
   text-transform: uppercase;
+  margin-top: rem(16);
+  font-size: rem(18);
+  @include mq(md) {
+    margin-top: rem(30);
+    font-size: rem(30);
+  }
 }
 
 .p-top-people__occupation {
   margin-top: rem(4);
   color: #00a040;
-  font-size: rem(14);
   font-weight: 700;
+  font-size: rem(12);
+  @include mq(md) {
+    font-size: rem(14);
+  }
 }
 /* .w509 {
   max-width: rem(509);
