--- a/src/sass/project/_p-entry.scss
+++ b/src/sass/project/_p-entry.scss
@@ -1,9 +1,13 @@
 @use "global" as *;
 
 .p-entry {
-  padding-top: rem(300);
-  padding-bottom: rem(200);
   position: relative;
+  padding-top: rem(48);
+  padding-bottom: rem(48);
+  @include mq(md) {
+    padding-top: rem(300);
+    padding-bottom: rem(200);
+  }
 }
 .p-entry::before {
   position: absolute;
@@ -29,13 +33,17 @@
 }
 
 .p-entry__from {
-  margin-top: rem(60);
   position: relative;
-  font-size: rem(30);
   font-weight: 700;
   color: #ed4e94;
   letter-spacing: 0.05em;
   text-align: center;
+  margin-top: rem(32);
+  font-size: rem(18);
+  @include mq(md) {
+    margin-top: rem(60);
+    font-size: rem(30);
+  }
 }
 .p-entry__from::before {
   position: absolute;
@@ -44,44 +52,57 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  width: rem(500);
   height: auto;
   aspect-ratio: 500 / 74;
   object-fit: cover;
   top: 50%;
   transform: translate(-50%, -50%);
   left: 50%;
+  width: rem(280);
+  @include mq(md) {
+    width: rem(500);
+  }
 }
 
 .p-entry__dl {
-  margin-top: rem(50);
   max-width: rem(1000);
   width: 100%;
   margin-left: auto;
   margin-right: auto;
+  margin-top: rem(24);
+  @include mq(md) {
+    margin-top: rem(50);
+  }
 }
 
 .p-entry__row {
-  display: flex;
-  padding-top: rem(30);
-  padding-bottom: rem(30);
   border-top: 1px dotted #cccccc;
+  padding-top: rem(16);
+  padding-bottom: rem(16);
+  @include mq(md) {
+    display: flex;
+    padding-top: rem(30);
+    padding-bottom: rem(30);
+  }
 }
 .p-entry__row:last-child {
   border-bottom: 1px dotted #cccccc;
 }
 .p-entry__dt {
+  font-size: rem(14);
+  font-weight: 700;
+  color: #242424;
   @include mq(md) {
     width: rem(250);
     padding-left: rem(20);
     font-size: rem(20);
-    font-weight: 700;
-    color: #242424;
   }
 }
 
 .p-entry__dd {
+  margin-top: rem(8);
   @include mq(md) {
+    margin-top: initial;
     width: calc(100% - rem(250));
     padding-left: rem(30);
   }
@@ -89,18 +110,25 @@
 
 .p-entry__dd-text {
   color: #242424;
-  font-size: rem(20);
   letter-spacing: 0.05em;
   line-height: calc(34 / 20);
   font-weight: 400;
+  font-size: rem(14);
+  @include mq(md) {
+    font-size: rem(20);
+  }
 }
 
 .p-entry__dd-small {
-  margin-top: rem(10);
-  font-size: rem(16);
   color: #242424;
   letter-spacing: 0.05em;
   line-height: calc(34 / 16);
+  margin-top: rem(8);
+  font-size: rem(12);
+  @include mq(md) {
+    margin-top: rem(10);
+    font-size: rem(16);
+  }
 }
 
 .p-entry__dd-link {
@@ -111,7 +139,10 @@
 }
 
 .p-entry__dd-icon {
-  width: rem(20);
+  width: rem(12);
+  @include mq(md) {
+    width: rem(20);
+  }
 }
 .p-entry__dd-icon img {
   width: 100%;
@@ -121,25 +152,34 @@
 }
 
 .p-entry__dd-map {
-  font-size: rem(16);
   letter-spacing: 0.05em;
   font-weight: 400;
   color: #242424;
+  font-size: rem(14);
+  @include mq(md) {
+    font-size: rem(16);
+  }
 }
 
 .p-entry__dd-bold {
-  font-size: rem(20);
   font-weight: 700;
   color: #242424;
   letter-spacing: 0.05em;
   line-height: calc(34 / 20);
+  font-size: rem(16);
+  @include mq(md) {
+    font-size: rem(20);
+  }
 }
 
 .p-entry__btn-wrapper {
-  margin-top: rem(60);
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-top: rem(32);
+  @include mq(md) {
+    margin-top: rem(60);
+  }
 }
 
 .p-entry__btn {
@@ -147,17 +187,24 @@
   align-items: center;
   justify-content: center;
   gap: rem(20);
-  width: rem(342);
-  height: rem(72);
   background: #f361a1;
   border-radius: 9999px;
+  width: rem(280);
+  height: rem(60);
+  @include mq(md) {
+    width: rem(342);
+    height: rem(72);
+  }
 }
 
 .p-entry__btn-text {
   color: #fff;
   letter-spacing: 0.05em;
   font-weight: 700;
-  font-size: rem(22);
+  font-size: rem(16);
+  @include mq(md) {
+    font-size: rem(22);
+  }
 }
 
 .p-entry__arrow {
