--- a/src/sass/project/_p-header.scss
+++ b/src/sass/project/_p-header.scss
@@ -2,19 +2,26 @@
 
 .p-header {
   position: fixed;
-  height: rem(100);
   z-index: 999;
   width: 100%;
   left: 0;
   right: 0;
   top: 0;
   background: transparent;
+  height: rem(80);
+  @include mq(md) {
+    height: rem(100);
+  }
 }
 
 .p-header__inner {
-  padding-left: rem(50);
-  padding-right: rem(50);
   height: inherit;
+  padding-left: rem(20);
+  padding-right: rem(20);
+  @include mq(md) {
+    padding-left: rem(50);
+    padding-right: rem(50);
+  }
 }
 
 .p-header__content {
@@ -30,7 +37,10 @@
 
 .p-header__home {
   display: inline-block;
-  width: rem(404);
+  width: rem(200);
+  @include mq(md) {
+    width: rem(404);
+  }
 }
 
 .p-header__home img {
@@ -61,11 +71,15 @@
   font-family: $lato-italic;
   font-style: italic;
   font-weight: 900;
-  font-size: rem(26);
   letter-spacing: 0.05em;
   background: #f566a5;
   border-radius: 9999px;
-  padding: rem(20) rem(58);
+  font-size: rem(14);
+  padding: rem(8) rem(16);
+  @include mq(md) {
+    font-size: rem(26);
+    padding: rem(20) rem(58);
+  }
 }
 .p-header__link-entry {
   background: #4d4ca1;
@@ -74,4 +88,10 @@
 }
 
 .p-header__drawer-content {
+}
+.p-header__list--pc {
+  display: none;
+  @include mq(md) {
+    display: block;
+  }
 }
