--- a/src/sass/project/_p-row.scss
+++ b/src/sass/project/_p-row.scss
@@ -1,8 +1,11 @@
 @use "global" as *;
 
 .p-row {
-  padding-top: rem(250);
   position: relative;
+  padding-top: rem(72);
+  @include mq(md) {
+    padding-top: rem(250);
+  }
 }
 .p-row::before {
   position: absolute;
@@ -36,20 +39,26 @@
 }
 
 .p-row__content {
-  max-width: rem(1400);
   width: 100%;
   margin-left: auto;
   margin-right: auto;
   display: flex;
   flex-direction: row-reverse;
-  gap: rem(63);
+  gap: rem(24);
+  @include mq(md) {
+    max-width: rem(1400);
+    gap: rem(63);
+  }
 }
 .p-row__content--second {
   flex-direction: row;
 }
 .p-row__title-wrapper {
-  max-width: rem(131);
   width: 100%;
+  max-width: rem(40);
+  @include mq(md) {
+    max-width: rem(131);
+  }
 }
 .p-row__title-wrapper img {
   width: 100%;
@@ -59,55 +68,81 @@
 }
 
 .p-row__block {
-  padding: rem(100);
   background: rgba($color: #fff, $alpha: 0.7);
   backdrop-filter: blur(16px);
-  border-radius: rem(50);
   filter: drop-shadow(0 0 15px rgba(0, 0, 0, 0.1));
   max-width: rem(1200);
   width: 100%;
+  padding: rem(16);
+  border-radius: rem(20);
+  @include mq(md) {
+    padding: rem(100);
+    border-radius: rem(50);
+  }
 }
 
 .p-row__block-top {
 }
 
 .p-row__block-titleWrapper {
-  text-align: center;
+  @include mq(md) {
+    text-align: center;
+  }
 }
 
 .p-row__block-title {
-  font-size: rem(32);
   font-weight: 900;
   color: #242424;
   letter-spacing: 0.05em;
+  font-size: rem(18);
+  @include mq(md) {
+    font-size: rem(32);
+  }
 }
 
 .p-row__block-textWrapper {
-  text-align: center;
-  margin-top: rem(30);
+  margin-top: rem(16);
+  @include mq(md) {
+    text-align: center;
+    margin-top: rem(30);
+  }
 }
 
 .p-row__block-text {
   color: #242424;
-  font-size: rem(16);
   letter-spacing: 0.05em;
   line-height: 2;
   font-weight: 400;
+  font-size: rem(14);
+  @include mq(md) {
+    font-size: rem(16);
+  }
 }
 
 .p-row__lists {
-  margin-top: rem(80);
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  column-gap: rem(40);
-  row-gap: rem(80);
+  grid-template-columns: repeat(1, 1fr);
+  gap: rem(24);
+  margin-top: rem(40);
+  @include mq(md) {
+    margin-top: rem(80);
+    column-gap: rem(40);
+    row-gap: rem(80);
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 .p-row__lists + .p-row__lists {
-  margin-top: rem(40);
+  margin-top: rem(24);
+  @include mq(md) {
+    margin-top: rem(40);
+  }
 }
 .p-row__lists:nth-child(2n) {
-  padding-top: rem(40);
   border-top: 1px dotted #cccccc;
+  padding-top: rem(24);
+  @include mq(md) {
+    padding-top: rem(40);
+  }
 }
 .p-row__list {
 }
@@ -121,19 +156,31 @@
 }
 
 .p-row__img {
-  max-width: rem(100);
   width: 100%;
   margin-left: auto;
   margin-right: auto;
+  max-width: rem(80);
+  @include mq(md) {
+    max-width: rem(100);
+  }
 }
 .p-row__img--115 {
-  max-width: rem(115);
+  max-width: rem(80);
+  @include mq(md) {
+    max-width: rem(115);
+  }
 }
 .p-row__img203 {
-  max-width: rem(203);
+  max-width: 100%;
+  @include mq(md) {
+    max-width: rem(203);
+  }
 }
 .p-row__img398 {
-  max-width: rem(398);
+  max-width: 100%;
+  @include mq(md) {
+    max-width: rem(398);
+  }
 }
 .p-row__img img {
   width: 100%;
@@ -143,33 +190,49 @@
 }
 
 .p-row__detail {
-  margin-top: rem(30);
+  margin-top: rem(20);
+  @include mq(md) {
+    margin-top: rem(30);
+  }
 }
 
 .p-row__detail-title {
-  text-align: center;
-  font-size: rem(22);
   font-weight: 700;
   color: #242424;
   letter-spacing: 0.05em;
+  font-size: rem(16);
+  @include mq(md) {
+    text-align: center;
+    font-size: rem(22);
+  }
 }
 
 .p-row__detail-text {
   margin-top: rem(10);
-  font-size: rem(16);
   line-height: 2;
   font-weight: 400;
   letter-spacing: 0.05em;
   color: #242424;
+  font-size: rem(14);
+  @include mq(md) {
+    font-size: rem(16);
+  }
 }
 .p-row__lists--double {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(1, 1fr);
+  @include mq(md) {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 .p-row__list--first {
-  padding-right: rem(40);
+  @include mq(md) {
+    padding-right: rem(40);
+  }
 }
 .p-row__list--second {
-  padding-left: rem(40);
-  border-left: 1px dotted #ccc;
+  @include mq(md) {
+    padding-left: rem(40);
+    border-left: 1px dotted #ccc;
+  }
 }
