--- a/src/sass/project/_p-submit.scss
+++ b/src/sass/project/_p-submit.scss
@@ -4,29 +4,42 @@
 }
 
 .p-submit__inner {
-  padding-left: rem(50);
-  padding-right: rem(50);
+  padding-left: rem(20);
+  padding-right: rem(20);
+  @include mq(md) {
+    padding-left: rem(50);
+    padding-right: rem(50);
+  }
 }
 
 .p-submit__btn-wrapper {
   display: flex;
-  gap: rem(20);
+  gap: rem(10);
+  flex-direction: column;
+  @include mq(md) {
+    gap: rem(20);
+    flex-direction: row;
+  }
 }
 
 .p-submit__btn {
-  max-width: rem(750);
   width: 100%;
+  padding: rem(16);
   display: flex;
   align-items: center;
   justify-content: space-between;
   border: 5px solid #f6f6f6;
-  border-radius: rem(60);
-  padding-top: rem(117);
-  padding-bottom: rem(116);
-  padding-left: rem(130);
-  padding-right: rem(100);
   background: #f566a5;
   filter: drop-shadow(0 0 20px rgba(0, 0, 0, 0.1));
+  border-radius: rem(28);
+  @include mq(md) {
+    border-radius: rem(60);
+    max-width: rem(750);
+    padding-top: rem(117);
+    padding-bottom: rem(116);
+    padding-left: rem(130);
+    padding-right: rem(100);
+  }
 }
 
 .p-submit__btn-detail {
@@ -34,25 +47,34 @@
 
 .p-submit__btn-title {
   font-family: $lato-italic;
-  font-size: rem(60);
   font-weight: 900;
   letter-spacing: 0.05em;
   color: #fff;
   text-transform: uppercase;
   font-style: italic;
+  font-size: rem(28);
+  @include mq(md) {
+    font-size: rem(60);
+  }
 }
 
 .p-submit__btn-text {
   margin-top: rem(20);
   color: #fff;
-  font-size: rem(20);
   font-weight: 700;
   line-height: calc(36 / 20);
+  font-size: rem(14);
+  @include mq(md) {
+    font-size: rem(20);
+  }
 }
 
 .p-submit__btn-icon {
   display: inline-block;
-  width: rem(100);
+  width: rem(32);
+  @include mq(md) {
+    width: rem(100);
+  }
 }
 .p-submit__btn-icon img {
   width: 100%;
@@ -63,6 +85,8 @@
 
 .p-submit__btn-entry {
   background: #4d4ca1;
-  max-width: rem(1050);
   width: 100%;
+  @include mq(md) {
+    max-width: rem(1050);
+  }
 }
