--- a/src/sass/project/_p-voice.scss
+++ b/src/sass/project/_p-voice.scss
@@ -1,8 +1,11 @@
 @use "global" as *;
 
 .p-voice {
-  padding-top: rem(250);
   position: relative;
+  padding-top: rem(120);
+  @include mq(md) {
+    padding-top: rem(250);
+  }
 }
 .p-voice::before {
   position: absolute;
@@ -31,17 +34,26 @@
   margin-left: calc(50% - 50vw);
   margin-right: calc(50% - 50vw);
   width: 100vw;
-  margin-top: rem(70);
+  margin-top: rem(40);
+  @include mq(md) {
+    margin-top: rem(70);
+  }
 }
 .swiper-voice {
   overflow-x: clip !important;
   overflow-y: visible !important;
 }
 .p-voice__card {
-  padding-left: rem(45);
-  padding-right: rem(45);
-  padding-bottom: rem(50);
-  border-radius: rem(50);
+  padding-left: rem(16);
+  padding-right: rem(16);
+  padding-bottom: rem(16);
+  border-radius: rem(20);
+  @include mq(md) {
+    padding-left: rem(45);
+    padding-right: rem(45);
+    padding-bottom: rem(50);
+    border-radius: rem(50);
+  }
 }
 .blue {
   background: linear-gradient(to top right, #36a9e1 0%, #65cdff 100%);
@@ -100,26 +112,36 @@
 }
 
 .p-voice__text-wrapper {
-  margin-top: rem(20);
+  margin-top: rem(12);
+  @include mq(md) {
+    margin-top: rem(20);
+  }
 }
 
 .p-voice__text {
   color: #fff;
   letter-spacing: 0.05em;
-  font-size: rem(16);
   line-height: 2;
   font-weight: 400;
+  font-size: rem(14);
+  @include mq(md) {
+    font-size: rem(16);
+  }
 }
+
 .p-voice__pagination {
   margin-top: rem(28);
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: rem(50);
   max-width: rem(295);
   width: 100%;
   margin-left: auto;
   margin-right: auto;
+  gap: rem(24);
+  @include mq(md) {
+    gap: rem(50);
+  }
 
   .swiper-pagination {
     position: relative;
@@ -142,10 +164,13 @@
   }
   .swiper-button-next,
   .swiper-button-prev {
-    width: rem(40);
+    width: rem(24);
     flex: 1;
     display: flex;
     align-items: center;
     justify-content: center;
+    @include mq(md) {
+      width: rem(40);
+    }
   }
 }
