--- a/src/sass/project/_p-top-people.scss
+++ b/src/sass/project/_p-top-people.scss
@@ -33,7 +33,7 @@
 }
 
 .p-top-people__top-title {
-  max-width: rem(280);
+  max-width: rem(240);
   width: 100%;
   margin-left: auto;
   margin-right: auto;
@@ -87,6 +87,7 @@
   margin-left: calc(50% - 50vw);
   margin-right: calc(50% - 50vw);
   width: 100vw;
+  margin-top: rem(24);
   @include mq(md) {
     margin-top: rem(-560);
   }
