--- a/src/sass/project/_p-mv.scss
+++ b/src/sass/project/_p-mv.scss
@@ -6,8 +6,12 @@
 }
 
 .p-mv__img img {
-  aspect-ratio: 1920 / 1080;
   object-fit: cover;
   width: 100%;
   height: auto;
+  aspect-ratio: 1220 / 1080;
+
+  @include mq(md) {
+    aspect-ratio: 1920 / 1080;
+  }
 }
